# opengl-shader-template

./: CMakeLists.txt  README.md  imgui.ini
shaders/: frag.fs
src/: glad.c  main.cpp
src/Application/: Application.cpp  Application.hpp
src/Shader/: Shader.cpp  Shader.hpp
